add test user and documentation
