# start/routes.ts
@@ -19,9 +19,6 @@
 */
 
 import Route from '@ioc:Adonis/Core/Route'
-
-Route.group(() => {
-  Route.post('/login', 'AuthController.login')
-  Route.post('/register', 'AuthController.register')
-  Route.post('/update-email', 'AuthController.updateEmail').middleware(['auth'])
-}).prefix('auth')
+import './routes/user'
+Route.post('/login', 'AuthController.login')
+Route.post('/register', 'AuthController.register')
